--- a/peekingduck/training/configs/trainer/classification.yaml
+++ b/peekingduck/training/configs/trainer/classification.yaml
@@ -45,7 +45,7 @@ pytorch:
         epochs: 50
         use_amp: False
         patience: 3
-        model_name: ${model[${framework}].model_name}
+        model_name: ${model.pytorch.model_name}
         debug: ${debug}
         debug_epochs: 3
         classification_type: ${data_module.dataset.classification_type}
@@ -55,8 +55,7 @@ pytorch:
         trainer:
             _target_: src.trainer.pytorch_trainer.pytorchTrainer
 
-
 tensorflow:
     global_train_params:
         trainer:
-                _target_: src.trainer.tensorflow_trainer.tensorflowTrainer
+            _target_: src.trainer.tensorflow_trainer.tensorflowTrainer
