--- a/peekingduck/training/configs/data_module/rsna.yaml
+++ b/peekingduck/training/configs/data_module/rsna.yaml
@@ -11,5 +11,6 @@ module:
       _target_: src.data.data_module.ImageClassificationDataModule
       _recursive_: False
 
+framework: ${framework}
 debug: ${debug}
 num_debug_samples: 1000
