--- a/peekingduck/training/configs/data_module/dataset/vegfru.yaml
+++ b/peekingduck/training/configs/data_module/dataset/vegfru.yaml
@@ -11,28 +11,28 @@ stratify_by: "class_name"
 classification_type: "multiclass"
 num_classes: 25
 class_name_to_id:
-  0: 0
-  1: 1
-  2: 2
-  3: 3
-  4: 4
-  5: 5
-  6: 6
-  7: 7
-  8: 8
-  9: 9
-  10: 10
-  11: 11
-  12: 12
-  13: 13
-  14: 14
-  15: 15
-  16: 16
-  17: 17
-  18: 18
-  19: 19
-  20: 20
-  21: 21
-  22: 22
-  23: 23
-  24: 24
+  "alliaceous": 0
+  "aquatic_vegetable": 1
+  "beans": 2
+  "brassia_olreacea": 3
+  "bug_seedling": 4
+  "cabbage": 5
+  "eggplant": 6
+  "green_leafy_vegatable": 7
+  "melon": 8
+  "mushroom": 9
+  "mustard": 10
+  "perennial": 11
+  "root_vegetable": 12
+  "tuber_vagetable": 13
+  "wild_vegetable": 14
+  "berry_fruit": 15
+  "citrus_fruit": 16
+  "collective_fruit": 17
+  "cucurbites": 18
+  "drupe": 19
+  "litchies": 20
+  "nut_fruit": 21
+  "persimmons_and_jujubes_fruit": 22
+  "pome": 23
+  "other_fruit": 24
