--- a/peekingduck/training/configs/data_module/dataset/vegfru15.yaml
+++ b/peekingduck/training/configs/data_module/dataset/vegfru15.yaml
@@ -4,16 +4,25 @@ blob_file: "vegfru.zip"
 root_dir: "data"
 train_dir: "./${.root_dir}/vegfru"
 test_dir: "./${.root_dir}/vegfru"
-train_csv: "./${.root_dir}/vegfru/vegfru5.csv"
+train_csv: "./${.root_dir}/vegfru/vegfru15.csv"
 image_path_col_name: "image_path"
 target_col_name: "class_id"
 stratify_by: "class_id"
 classification_type: "multiclass"
-num_classes: 5
+num_classes: 15
 class_name_to_id:
   "garlic": 0
   "cattail": 1
   "soybean": 2
   "red_cabbage": 3
   "mung_bean_sprouts": 4
-
+  "pakchoi": 5
+  "eggplant": 6
+  "chrysanthemum": 7
+  "snake_gourd": 8
+  "nameko": 9
+  "mustard": 10
+  "Lily": 11
+  "beetroot": 12
+  "kudzu": 13
+  "fallopia_multiflora": 14
