--- a/peekingduck/training/configs/model/classification.yaml
+++ b/peekingduck/training/configs/model/classification.yaml
@@ -1,7 +1,7 @@
 pytorch:
     adapter: "torchvision"
     task: "classification"
-    model_name: "resnet18" # resnet18 efficientnet_v2_s vgg11 
+    model_name: "resnet18" # resnet18 efficientnet_v2_s vgg11
     model_type:
         _target_: src.model.pytorch_model.ImageClassificationModel
     num_classes: ${data_module.dataset.num_classes}
@@ -11,7 +11,8 @@ pytorch:
 
 tensorflow:
     task: "classification"
-    model_name: "MobileNetV2" # resnet18 efficientnet_v2_s
+    model_name: "MobileNetV2" # ResNet50 efficientnet_v2_s MobileNetV2
+    preprocess: "mobilenet_v2"
     model_type:
         _target_: src.model.tensorflow_model.ImageClassificationModel
     num_classes: ${data_module.dataset.num_classes}
