--- a/peekingduck/training/configs/trainer/classification.yaml
+++ b/peekingduck/training/configs/trainer/classification.yaml
@@ -29,17 +29,36 @@ pytorch:
             lr: 0.003 # bs: 32 -> lr = 3e-4
             betas: [0.9, 0.999]
             amsgrad: False
-            weight_decay: 0.000001
+            weight_decay: 0.01 # 0.000001
             eps: 0.00000001
 
     scheduler_params:
-        scheduler: "CosineAnnealingWarmRestarts" # Debug
+        # https://towardsdatascience.com/a-visual-guide-to-learning-rate-schedulers-in-pytorch-24bbb262c863
+
+        scheduler: "OneCycleLR" # Debug 
         scheduler_params:
-            T_0: 3
-            T_mult: 1
-            eta_min: 0.000001
-            last_epoch: -1
-            verbose: False
+            max_lr: 1e-3 # (float or list)
+            # total_steps: epochs * steps_per_epoch # (int) Simple relation : total_steps = epochs * steps_per_epoch
+            epochs: 25 # (int)
+            steps_per_epoch: 32 # (int)
+            # pct_start: 0.3 # (float)
+            anneal_strategy: 'cos' # (str)
+            # cycle_momentum: True # (bool)
+            # base_momentum: 0.85 # (float or list)
+            # max_momentum: 0.95 # (float or list)
+            # div_factor: 25.0 # (float)
+            # final_div_factor: 10000.0 # (float)
+            # three_phase: False # (bool)
+            # last_epoch: -1 # (int)
+            # verbose: False # (bool)
+
+        # scheduler: "CosineAnnealingWarmRestarts" # Debug
+        # scheduler_params:
+        #     T_0: 3
+        #     T_mult: 1
+        #     eta_min: 0.000001
+        #     last_epoch: -1
+        #     verbose: False
 
     global_train_params:
         epochs: 50
@@ -47,7 +66,7 @@ pytorch:
         patience: 9
         model_name: ${model.pytorch.model_name}
         debug: ${debug}
-        debug_epochs: 3
+        debug_epochs: 25
         classification_type: ${data_module.dataset.classification_type}
         monitored_metric:
             monitor: val_MulticlassAccuracy
