--- a/peekingduck/training/configs/data_module/dataset/vegfru25.yaml
+++ b/peekingduck/training/configs/data_module/dataset/vegfru25.yaml
@@ -2,9 +2,9 @@ download: False
 url: ""
 blob_file: "vegfru.zip"
 root_dir: "data"
-train_dir: "./${.root_dir}/${project_name}"
-test_dir: "./${.root_dir}/${project_name}"
-train_csv: "./${.root_dir}/${project_name}/vegfru_all.csv"
+train_dir: "./${.root_dir}/vegfru"
+test_dir: "./${.root_dir}/vegfru"
+train_csv: "./${.root_dir}/vegfru/train.csv"
 image_path_col_name: "image_path"
 target_col_name: "class_id"
 stratify_by: "class_name"
