--- a/peekingduck/training/configs/model/classification.yaml
+++ b/peekingduck/training/configs/model/classification.yaml
@@ -3,7 +3,7 @@ pytorch:
     task: "classification"
     model_name: "resnet18" # resnet18 efficientnet_v2_s vgg11-19 vgg16 mobilenet_v3_small  https://pytorch.org/vision/stable/models.html#classification
     model_type:
-        _target_: src.model.pytorch_model.ImageClassificationModel
+        _target_: src.model.pytorch_model.PTClassificationModel
     num_classes: ${data_module.dataset.num_classes}
     device: ${device}
     pretrained: True
