fix: fix callbacks passed in model.fit instead of model.compile

--- a/peekingduck/training/configs/data_module/dataset/cifar10.yaml
+++ b/peekingduck/training/configs/data_module/dataset/cifar10.yaml
@@ -6,7 +6,7 @@ train_dir: "./${.root_dir}/${project_name}"
 test_dir: "./${.root_dir}/${project_name}"
 train_csv: "./${.root_dir}/${project_name}/train.csv"
 image_path_col_name: "image_path"
-target_col_name: "class_id" #class_name
+target_col_name: "class_name" #class_id
 stratify_by: "${.target_col_name}"
 classification_type: "multiclass"
 num_classes: 10
