--- a/peekingduck/training/configs/data_module/dataset/cifar10.yaml
+++ b/peekingduck/training/configs/data_module/dataset/cifar10.yaml
@@ -10,6 +10,7 @@ target_col_name: "class_name" #class_id
 stratify_by: "${.target_col_name}"
 classification_type: "multiclass"
 num_classes: 10
+image_size: 32
 class_name_to_id:
   airplane: 0
   automobile: 1
