--- a/peekingduck/training/configs/model/classification.yaml
+++ b/peekingduck/training/configs/model/classification.yaml
@@ -11,7 +11,7 @@ pytorch:
 
 tensorflow:
     task: "classification"
-    model_name: "ResNet50" # ResNet50 efficientnet_v2_s MobileNetV2
+    model_name: "VGG16" # VGG16 ResNet50 EfficientNetV2S
     model_type:
         _target_: src.model.tensorflow_model.TFClassificationModelFactory
     num_classes: ${data_module.dataset.num_classes}
