--- a/peekingduck/training/configs/data_module/dataset/rsna.yaml
+++ b/peekingduck/training/configs/data_module/dataset/rsna.yaml
@@ -6,9 +6,11 @@ train_dir: "./${.root_dir}/${project_name}"
 test_dir: "./${.root_dir}/${project_name}"
 train_csv: "./${.root_dir}/${project_name}/train.csv"
 image_path_col_name: "image_path"
-target_col_name: "cancer"
+target_col_name: "class_name" #class_name cancer
+target_col_id: "class_id"
 stratify_by: "${.target_col_name}"
 classification_type: "multiclass"
+image_size: 224
 num_classes: 2
 class_name_to_id:
   benign: 0
