refact: transforms refact to tf.keras.utils.Sequence

--- a/peekingduck/training/configs/data_module/data_adapter/adapter.yaml
+++ b/peekingduck/training/configs/data_module/data_adapter/adapter.yaml
@@ -19,6 +19,7 @@ pytorch:
     shuffle: False
     pin_memory: True
     drop_last: False
+
 tensorflow:
   adapter_type: "tensorflow"
   scale: 255.
@@ -27,11 +28,12 @@ tensorflow:
     batch_size: 32
     shuffle: True
     x_col: ${data_module.dataset.image_path_col_name}
-    y_col: ${data_module.dataset.target_col_name}
+    y_col: ${data_module.dataset.target_col_id}
     target_size:
       - ${data_module.dataset.image_size}
       - ${data_module.dataset.image_size}
     color_mode: "rgb"
+    num_classes: ${data_module.dataset.num_classes}
     classes: ${data_module.dataset.class_name_to_id}
     class_mode: "categorical"
     interpolation: "nearest"
@@ -41,11 +43,12 @@ tensorflow:
     batch_size: 32
     shuffle: False
     x_col: ${data_module.dataset.image_path_col_name}
-    y_col: ${data_module.dataset.target_col_name}
+    y_col: ${data_module.dataset.target_col_id}
     target_size:
       - ${data_module.dataset.image_size}
       - ${data_module.dataset.image_size}
     color_mode: "rgb"
+    num_classes: ${data_module.dataset.num_classes}
     classes: ${data_module.dataset.class_name_to_id}
     class_mode: "categorical"
     interpolation: "nearest"
@@ -55,11 +58,12 @@ tensorflow:
     batch_size: 1
     shuffle: False
     x_col: ${data_module.dataset.image_path_col_name}
-    y_col: ${data_module.dataset.target_col_name}
+    y_col: ${data_module.dataset.target_col_id}
     target_size:
       - ${data_module.dataset.image_size}
       - ${data_module.dataset.image_size}
     color_mode: "rgb"
+    num_classes: ${data_module.dataset.num_classes}
     classes: ${data_module.dataset.class_name_to_id}
     class_mode: "categorical"
     interpolation: "nearest"
