--- a/peekingduck/training/configs/data_module/transform/test.yaml
+++ b/peekingduck/training/configs/data_module/transform/test.yaml
@@ -1,8 +1,18 @@
-test:
-  - _target_: torchvision.transforms.ToPILImage
-  - _target_: torchvision.transforms.Resize
-    size: ${data_module.dataset.image_size}
-  - _target_: torchvision.transforms.ToTensor
-  - _target_: torchvision.transforms.Normalize
-    mean: [0.4913997551666284, 0.48215855929893703, 0.4465309133731618]
-    std: [0.24703225141799082, 0.24348516474564, 0.26158783926049628]
+pytorch:
+  test:
+    - _target_: albumentations.augmentations.crops.transforms.CenterCrop
+      height: ${data_module.dataset.image_size}
+      width: ${data_module.dataset.image_size}
+    - _target_: albumentations.augmentations.transforms.Normalize
+      mean: [0.4913997551666284, 0.48215855929893703, 0.4465309133731618]
+      std: [0.24703225141799082, 0.24348516474564, 0.26158783926049628]
+    - _target_: albumentations.pytorch.transforms.ToTensorV2
+
+tensorflow:
+  test:
+    - _target_: albumentations.augmentations.crops.transforms.CenterCrop
+      height: ${data_module.dataset.image_size}
+      width: ${data_module.dataset.image_size}
+    - _target_: albumentations.augmentations.transforms.Normalize
+      mean: [0.4913997551666284, 0.48215855929893703, 0.4465309133731618]
+      std: [0.24703225141799082, 0.24348516474564, 0.26158783926049628]
