--- a/peekingduck/training/configs/callbacks/classification.yaml
+++ b/peekingduck/training/configs/callbacks/classification.yaml
@@ -1,4 +1,5 @@
 pytorch:
+    # Options: EarlyStopping | History | MetricMeter | ModelCheckpoint
     - EarlyStopping:
         mode: 'max'
         monitor: 'val_MulticlassAccuracy'
@@ -11,17 +12,10 @@ pytorch:
         monitor: 'val_MulticlassAccuracy'
 
 tensorflow:
-    - History
+    # Options: EarlyStopping | ModelCheckpoint | ProgbarLogger | BackupAndRestore | BaseLogger | CSVLogger | LambdaCallback | LearningRateScheduler | ReduceLROnPlateau | RemoteMonitor | TensorBoard | TerminateOnNaN
     - EarlyStopping:
         patience: 25
         restore_best_weights: True
         monitor: "categorical_accuracy"
-    - ProgbarLogger:
-        count_mode: "steps"
-    - ModelCheckpoint:
-        filepath: "./outputs/${project_name}/${stores.unique_id}/"
-        save_weights_only: True
-        monitor: 'categorical_accuracy'
-        mode: 'max'
-        save_best_only: True
-        save_freq: 'epoch'
+
+
