--- a/peekingduck/training/configs/trainer/classification.yaml
+++ b/peekingduck/training/configs/trainer/classification.yaml
@@ -76,16 +76,16 @@ pytorch:
 
 tensorflow:
     lr_schedule_params:
-        schedule: "CosineDecayRestarts"
-        schedule_params:
-            initial_learning_rate: 0.003
-            first_decay_steps: 10
-            t_mul: 2.0
-            m_mul: 1.0
-            alpha: 0.0
-        # schedule: null
+        # schedule: "CosineDecayRestarts"
         # schedule_params:
-        #     learning_rate: 0.003
+        #     initial_learning_rate: 0.003
+        #     first_decay_steps: 10
+        #     t_mul: 2.0
+        #     m_mul: 1.0
+        #     alpha: 0.0
+        schedule: null
+        schedule_params:
+            learning_rate: 0.003
         # schedule: "PiecewiseConstantDecay"
         # schedule_params:
         #     values: [1.0, 0.5, 0.1]
