--- a/peekingduck/training/configs/data_module/transform/train.yaml
+++ b/peekingduck/training/configs/data_module/transform/train.yaml
@@ -21,8 +21,7 @@ tensorflow:
     - _target_: src.transforms.augmentations.TFPreprocessImage
       preprocessor: keras.applications.vgg16.preprocess_input
       p: 1.
-    # - _target_: albumentations.augmentations.geometric.transforms.Flip
+    - _target_: albumentations.augmentations.geometric.transforms.Flip
     # - _target_: albumentations.augmentations.transforms.Normalize
     #   mean: [103.939, 116.779, 123.68]
     #   std: [1, 1, 1]
-  preprocess_image: tensorflow.keras.applications.vgg16.preprocess_input
