feat: refactor pytorch trainer class, added vegfru fine tune and dropout layer parameter from config

--- a/peekingduck/training/configs/metrics/classification.yaml
+++ b/peekingduck/training/configs/metrics/classification.yaml
@@ -1,9 +1,9 @@
 pytorch:
     # Options: Accuracy | Precision | Recall | AUROC
-    - "Accuracy"
-    - "Precision"
-    - "Recall"
-    - "AUROC"
+    - "accuracy"
+    - "precision"
+    - "recall"
+    - "auroc"
     - "multiclass_calibration_error"
 
 tensorflow:
