--- a/peekingduck/training/configs/model/classification.yaml
+++ b/peekingduck/training/configs/model/classification.yaml
@@ -18,3 +18,6 @@ tensorflow:
     image_size: ${data_module.dataset.image_size}
     device: ${device}
     pretrained: True
+    dropout_rate: 0.3
+    fine_tune_params:
+        unfreeze_layers: 4
