--- a/peekingduck/training/configs/model/classification.yaml
+++ b/peekingduck/training/configs/model/classification.yaml
@@ -7,6 +7,7 @@ pytorch:
     num_classes: ${data_module.dataset.num_classes}
     device: ${device}
     pretrained: True
+    unfreeze_all_layers: True
     # You typically want _self_ somewhere after the schema (base_config)
 
 tensorflow:
@@ -18,6 +19,5 @@ tensorflow:
     image_size: ${data_module.dataset.image_size}
     device: ${device}
     pretrained: True
+    unfreeze_layers: -1 # -1 (All) | int (Last N Layers) | 0 (Freeze All)
     dropout_rate: 0.3
-    fine_tune_params:
-        unfreeze_layers: 4
