feat: implemented logger callback for pytorch

--- a/peekingduck/training/configs/callbacks/classification.yaml
+++ b/peekingduck/training/configs/callbacks/classification.yaml
@@ -1,5 +1,6 @@
 pytorch:
     # Options: EarlyStopping | History | MetricMeter | ModelCheckpoint
+    - Logger
     - EarlyStopping:
         mode: 'max'
         monitor: 'val_MulticlassAccuracy'
