fix: allow `auto` for gpu device

--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -1,4 +1,4 @@
-device: "auto"
+device: "auto"  # "auto" to select available gpu. "cpu"|"cuda"|"mps"
 project_name: "cifar10" #rsna | cifar10 | vegfru | vegfru5 | vegfru20
 debug: True
 framework: "tensorflow" # 'pytorch' | 'tensorflow'
