--- a/peekingduck/training/configs/model/classification.yaml
+++ b/peekingduck/training/configs/model/classification.yaml
@@ -1,5 +1,5 @@
 pytorch:
-    adapter: "torchvision" # torchvision or timm
+    adapter: "timm" # torchvision or timm
     task: "classification"
     # model name references:
     # https://pytorch.org/vision/stable/models.html#classification
@@ -7,8 +7,8 @@ pytorch:
     model_name: "vgg16" # resnet18 efficientnet_v2_s vgg11-19 vgg16 mobilenet_v3_small
     weights: "DEFAULT" # updated since torchvision v0.13. Refer to official doc for customized values.
     pretrained: True # for timm only
-    unfreeze: "partial" # all (unfreeze all backbone layers) | none (freeze all backbone layers) | partial (Last N Layers)
-    unfreeze_modules: # module name followed by the number of the last layers within the module to unfreeze. Only applicable when unfreeze setting is "partial"
+    unfreeze: "partial" # all (unfreeze all layers) | none (unfreeze the classifier only) | partial (unfreeze the classifier and part of the backbone)
+    unfreeze_modules: # valid when unfreeze == "partial". module name followed by the number of the last layers within the module to unfreeze.
         # -1 (freeze all layers within the module) | int (last N layers)
         features: 3
     model_type:
@@ -27,4 +27,12 @@ tensorflow:
     device: ${device}
     pretrained: True
     unfreeze_layers: -1 # -1 (All) | int (Last N Layers) | 0 (Freeze All)
+    fine_tune: True # True or False
+    fine_tune_layers: [
+            "prediction_modified",
+            "fc1",
+            "fc2",
+            "block5_conv3",
+            "block5_conv2",
+        ] # prediction layer need to be included. If not, the weights will not be updated
     dropout_rate: 0.3
