--- a/peekingduck/training/configs/trainer/classification.yaml
+++ b/peekingduck/training/configs/trainer/classification.yaml
@@ -35,7 +35,7 @@ pytorch:
     scheduler_params:
         # https://towardsdatascience.com/a-visual-guide-to-learning-rate-schedulers-in-pytorch-24bbb262c863
         scheduler: null
-        scheduler_params:
+        scheduler_params: null
 
         # scheduler: "OneCycleLR" # Debug 
         # scheduler_params:
@@ -63,8 +63,7 @@ pytorch:
         #     verbose: False
 
     global_train_params:
-        epochs: 50
-        use_amp: False
+        epochs: 20
         patience: 1
         model_name: ${model.pytorch.model_name}
         debug: ${debug}
@@ -109,7 +108,7 @@ tensorflow:
         loss_params:
             from_logits: False
     global_train_params:
-        epochs: 100
+        epochs: 20
         debug: ${debug}
         debug_epochs: 30
         trainer:
