feat: set train test split random state 42

--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -2,6 +2,7 @@ device: "auto"  # "auto" to select available gpu. "cpu"|"cuda"|"mps"
 project_name: "cifar10" #rsna | cifar10 | vegfru | vegfru5 | vegfru20
 debug: True
 framework: "tensorflow" # 'pytorch' | 'tensorflow'
+random_state: 42
 
 defaults:
   - use_case: classification # classification | detection | segmentation
