fix: tf auc metric config file to use num_class from data module config file instead of hardcode

--- a/peekingduck/training/configs/metrics/classification.yaml
+++ b/peekingduck/training/configs/metrics/classification.yaml
@@ -20,4 +20,4 @@ tensorflow:
       - AUC:
               from_logits: False
               multi_label: True
-              num_labels: 25
+              num_labels: ${data_module.dataset.num_classes}
