--- a/peekingduck/training/configs/data_module/transform/test.yaml
+++ b/peekingduck/training/configs/data_module/transform/test.yaml
@@ -1,6 +1,6 @@
 pytorch:
   test:
-    - _target_: albumentations.augmentations.crops.transforms.CenterCrop
+    - _target_: albumentations.augmentations.geometric.resize.Resize
       height: ${data_module.dataset.image_size}
       width: ${data_module.dataset.image_size}
     - _target_: albumentations.augmentations.transforms.Normalize
@@ -10,7 +10,7 @@ pytorch:
 
 tensorflow:
   test:
-    - _target_: albumentations.augmentations.crops.transforms.CenterCrop
+    - _target_: albumentations.augmentations.geometric.resize.Resize
       height: ${data_module.dataset.image_size}
       width: ${data_module.dataset.image_size}
     - _target_: src.transforms.augmentations.TFPreprocessImage
